<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DNS 重写</string>
    <string name="app_description">按无线网络或移动网络重写系统 DNS</string>
    <string name="service_waiting">LSPosed 正连接</string>
    <string name="service_disconnected">LSPosed 未连接，请重启</string>
    <string name="service_ready">LSPosed 已连接</string>
    <string name="scope_missing">请启用系统框架并重启</string>
    <string name="defaults_title">默认网络配置</string>
    <string name="wireless_network">无线网络</string>
    <string name="primary_dns">首选 DNS</string>
    <string name="secondary_dns">备用 DNS</string>
    <string name="save_defaults">保存默认配置</string>
    <string name="theme_color">主题</string>
    <string name="about">关于</string>
    <string name="personal_homepage">个人主页</string>
    <string name="repository">仓库地址</string>
    <string name="personal_homepage_url" translatable="false">https://aite.me/</string>
    <string name="repository_url" translatable="false">https://github.com/xiaoqidun/dnsrw</string>
    <string name="wifi_rules_title">无线网络重写</string>
    <string name="sim_rules_title">移动网络重写</string>
    <string name="add_wireless_rewrite">添加无线网络重写</string>
    <string name="add_mobile_rewrite">添加移动网络重写</string>
    <string name="edit">修改</string>
    <string name="delete">删除</string>
    <string name="cancel">取消</string>
    <string name="save">保存</string>
    <string name="ssid_label">网络名称</string>
    <string name="rule_mode">重写方式</string>
    <string name="custom_dns_required">自定义 DNS 至少填写一项</string>
    <string name="delete_title">删除重写</string>
    <string name="delete_message">确定删除“%1$s”的重写配置吗？</string>
    <string name="invalid_dns">请输入有效的 IPv4 或 IPv6 地址</string>
    <string name="empty_ssid">无线网络名称不能为空</string>
    <string name="no_seen_sim">暂无活动移动网络</string>
    <string name="no_seen_wireless">暂无已保存无线网络</string>
    <string name="select_sim">选择移动网络</string>
    <string name="select_wireless_network">选择无线网络</string>
    <string name="manual_wireless_network">手动输入网络名称</string>
    <string name="mobile_network">移动网络</string>
    <string name="iccid">ICCID  %1$s</string>
    <string name="network_identifier">网络标识  %1$s</string>
    <string name="not_seen_now">当前未检测到</string>
    <string-array name="rule_modes">
        <item>不更改</item>
        <item>自定义</item>
        <item>使用无线网络默认配置</item>
        <item>使用移动网络默认配置</item>
    </string-array>
    <string-array name="theme_colors">
        <item>系统</item>
        <item>藤紫</item>
        <item>靛蓝</item>
        <item>青绿</item>
        <item>暖橙</item>
    </string-array>
</resources>
