<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="24dp"
    android:paddingTop="20dp"
    android:paddingEnd="24dp"
    android:paddingBottom="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@null"
            android:padding="8dp"
            android:src="@drawable/ic_dns_24"
            app:tint="?attr/colorPrimary" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.Material3.TitleLarge" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:ellipsize="end"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:text="@string/app_description"
                android:textAppearance="@style/TextAppearance.Material3.BodySmall"
                android:textColor="?attr/colorOnSurfaceVariant" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/personal_homepage"
        style="@style/DnsRw.AboutRow"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_home_24"
            app:tint="?attr/colorPrimary" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:includeFontPadding="false"
            android:maxLines="1"
            android:text="@string/personal_homepage"
            android:textAppearance="@style/TextAppearance.Material3.LabelLarge" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_open_in_new_24"
            app:tint="?attr/colorOnSurfaceVariant" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/repository"
        style="@style/DnsRw.AboutRow"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_code_24"
            app:tint="?attr/colorPrimary" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:includeFontPadding="false"
            android:maxLines="1"
            android:text="@string/repository"
            android:textAppearance="@style/TextAppearance.Material3.LabelLarge" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_open_in_new_24"
            app:tint="?attr/colorOnSurfaceVariant" />
    </LinearLayout>
</LinearLayout>
